<resources>
    <string name="app_name">TravelConsuption</string>
    <string name="text_Header">Aplicativo para calcular o cosumo de viagens</string>
    <string name="edit_Distance">Distância</string>
    <string name="text_total_Km">Total em Quilômetros</string>
    <string name="edit_Price">Preço</string>
    <string name="text_Price_per_Liter">Preço por Litro</string>
    <string name="edit_Autonomy">Autonomia</string>
    <string name="text_Autonomy">Quilometros por litro</string>
    <string name="text_Ans">seu gasto total será de: </string>
    <string name="text_label_result">R$ 0</string>
    <string name="button_Calculate">Calcular</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
    <string name="no_div_zero">Não existe divisão por zero</string>

</resources>